...
            android:hint="@string/label_name"
            app:layout_constraintEnd_toStartOf="@+id/ibIconPicker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.imageview.ShapeableImageView
...
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/llLaunch">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btCreateShortcut"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:icon="@drawable/ic_add_home_work"
                app:iconTint="?attr/colorOnPrimary"
                android:text="@string/context_action_shortcut" />
...
