...
                app:endIconMode="clear_text"
                app:endIconTint="?attr/colorOnSurfaceVariant"
                app:startIconDrawable="@drawable/ic_search"
                app:startIconTint="?attr/colorOnSurfaceVariant">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:textColor="?attr/colorOnSurface"
                    android:textColorHint="?attr/colorOnSurfaceVariant" />
...
                app:indicatorSize="24dp"
                app:trackThickness="2dp" />
        </FrameLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment_content_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:navGraph="@navigation/nav_graph" />
...
