<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/PackageListFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/nav_all" />
    <item
        android:id="@+id/FavoritesFragment"
        android:icon="@drawable/ic_favorite"
        android:title="@string/nav_favorites" />
    <item
        android:id="@+id/RecentsFragment"
        android:icon="@drawable/ic_rocket_launch"
        android:title="@string/nav_recents" />
    <item
        android:id="@+id/ShortcutsFragment"
        android:icon="@drawable/ic_add_home_work"
        android:title="@string/nav_shortcuts" />
</menu>
